src/test/examples/invalid/semanticErr/array/differentElemtypeArray.wacc

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  int[] a = [1, true, 'c']
end
